# isaac_sim_imitation_learning

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
analytic_solver/: package.xml  setup.cfg  setup.py
analytic_solver/analytic_solver/: AnalyticSolver.py  TrajectoryRecorder.py
analytical_solver/: package.xml  setup.cfg  setup.py
analytical_solver/analytical_solver/: AnalyticalSolver.py  TrajectoryRecorder.py
analytical_solver/analytical_solver/moveit_interface/: moveit2.py
imitation_learning/: package.xml  setup.py
imitation_learning/config/: config.yaml
imitation_learning/imitation_learning/: ACT_Actor.py  ACT_Learner.py  IL_Gym_Env.py  IL_Gym_Env_archive.py  Instructor.py  LeRobot_to_VQA_dataset.py  PI_Actor.py  Train_VQA.py  __init__.py  merger.py
imitation_learning/launch/: bringup_robot_scene.launch.py
isaac_sim_imitation_learning/: ScenePlanner.py
isaac_sim_msgs/: CMakeLists.txt  package.xml
isaac_sim_msgs/action/: Demonstration.action
isaac_sim_msgs/srv/: Attribute.srv  CheckSuccess.srv  Collision.srv  CollisionRequest.srv  Demonstration.srv  Dimensions.srv  Pose.srv  PoseRequest.srv  Prompt.srv  Randomize.srv  RegisterScene.srv  SetJoint.srv  TubeParameter.srv
isaac_sim_scene_handler/: .pre-commit-config.yaml  package.xml  setup.cfg  setup.py
isaac_sim_scene_handler/config/: init.yaml
isaac_sim_scene_handler/isaac_sim_scene_handler/: ScenePlanner.py
isaac_sim_scene_handler/launch/: isaac_sim.launch.py  (+1 more)
launch/: bringup_robot_scene.launch.py  isaac_sim.launch.py
(+23 files in other folders)
