[project]
name = "isaac-sim-imitation-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catkin-pkg>=1.1.0",
    "empty>=4.2",
    "isaacsim==5.1.0",
    "lark>=1.3.1",
    "pytest>=9.0.1",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pydocstyle]
convention = "pep257"
add-ignore = ["D100", "D104"]
